kustomize/overlays/production/pgsync.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pgsync
spec:
  serviceName: pgsyc
  replicas: 1
  selector:
    matchLabels:
      app: pgsync
  template:
    metadata:
      labels:
        app: pgsync
    spec:
      containers:
        - name: pgsync
          image: natsume197/pgsync:3.2.1
          # bootstrap / pgsync
          command: [ "pgsync"]
          args: ["--config", "/data/schema.json", "--daemon"]
          #args: ["--config", "/data/schema.json"]
          # loop forever, outputting "yo" every 5 seconds
          # command: [ "sh", "-c"]
          # args: ["while true; do echo 'yo' && sleep 5; done;"]
          volumeMounts:
            - name: pgsync-data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: pgsync-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "local-storage"
        resources:
          requests:
            storage: 100Mi
