kustomize/overlays/production/pgroonga.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgroonga
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgroonga
  template:
    metadata:
      labels:
        app: pgroonga
    spec:
      containers:
        - name: pgroonga
          image: groonga/pgroonga:4.0.5-alpine-17
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: pgroongadb
      volumes:
        - name: pgroongadb
          persistentVolumeClaim:
            claimName: pgroonga-pvolume-claim
---
apiVersion: v1
kind: Service
metadata:
  name: pgroonga-service
  labels:
    app: pgroonga
spec:
  type: NodePort
  ports:
    - port: 5432
  selector:
    app: pgroonga
