kustomize/overlays/production/brigadasos-db-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: brigadasos-db
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: brigadasos-db
  template:
    metadata:
      labels:
        app: brigadasos-db
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - image: brigadasos-db
          name: brigadasos-db
          ports:
            - containerPort: 5000
          volumeMounts:
            - mountPath: /data/
              name: brigadasos-db-vol
      volumes:
        - name: brigadasos-db-vol
          persistentVolumeClaim:
            claimName: brigadasos-db-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: brigadasos-db-service
  labels:
    app: brigadasos-db
spec:
  selector:
    app: brigadasos-db
  ports:
   - port: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: brigadasos-db-ingress
  labels:
    app: brigadasos-db
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "10G"
    nginx.org/client-max-body-size: "10G"
    cert-manager.io/cluster-issuer: clusterissuer-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.brigadasos.xyz
      secretName: certificate-nadeshiko-db
  rules:
    - host: api.brigadasos.xyz
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: brigadasos-db-service
                port:
                  number: 5000
